cabal-version: 3.0
name: rogui-sdl-opengl-backend
synopsis: A SDL2 backend using OpenGL for rendering
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Raveline
maintainer: eraveline@gmail.com
category: Game
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with: ghc ==9.6 || ==9.8 || ==9.12.2

flag devel
  description: enable development mode (i.e. disable -Werror)
  default: False

common warnings
  ghc-options: -Wall

  if !flag(devel)
    ghc-options:
      -Wall
      -Werror
  default-extensions:
    FlexibleContexts
    OverloadedStrings
    RecordWildCards
    TypeApplications

library
  import: warnings
  default-language: Haskell2010
  exposed-modules:
    Rogui.Backend.OpenGL.Eval
    Rogui.Backend.OpenGL.Primitives
    Rogui.Backend.OpenGL.Shader
    Rogui.Backend.OpenGL.Types
    Rogui.Backend.SDLOpenGL

  build-depends:
    base >=4.21.0 && <4.22,
    bytestring >=0.12.2 && <0.13,
    containers >=0.7 && <0.8,
    dlist >=1.0 && <1.1,
    gl >=0.9 && <0.10,
    linear >=1.23.3 && <1.24,
    mtl >=2.3.1 && <2.4,
    raw-strings-qq >=1.1 && <1.2,
    rogui >=0.1.0 && <0.2,
    rogui-sdl-backend-commons >=0.1.0 && <0.2,
    sdl2 >=2.5.5 && <2.6,
    sdl2-image >=2.1.0 && <2.2,
    text >=2.1.2 && <2.2,

  hs-source-dirs: src
